Fix modal on iphone

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,5 +1,7 @@
 @use "sass:math";
 .modal {
+  min-height: fit-content;
+  min-width: initial;
   position: fixed;
   top: 0;
   left: 0;
